# Ximage

./: .gitignore  LICENSE  README.md  README_CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
