[package]
name = "Ximage"
version = "0.0.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "Ximage"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.9.5", features = ["default"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-os = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.24", features = ["jpeg", "png", "webp-encoder"] }
anyhow = "1.0"
log = "0.4"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
img-parts = "0.4"
webp = "0.3"
oxipng = "9.0"
imagequant = "4.3"
png = "0.17"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
